# dpi-accelerator-beckn-onix

./: README.md  contributing.md  go.mod  go.sum
.github/workflows/: abd.yml  ci.yml  weekly-update.yml
.workflows/ossify/: ossify.sh
cmd/admin/: main.go  main_test.go
cmd/gateway/: main.go  main_test.go
cmd/registry/: main.go  main_test.go
cmd/subscriber/: main.go  main_test.go
configs/: registry-admin.yaml  subscriber.yaml
deploy/onix-installer/: README.md
deploy/onix-installer-v2/backend/: .env  database.py  main.py  middleware.py  pyproject.toml
deploy/onix-installer-v2/backend/core/: constants.py  models.py
deploy/onix_installer/: README.md
internal/event/: publisher_test.go
internal/onixctl/: builder.go  builder_test.go  root.go  root_test.go  workspace.go  workspace_test.go
internal/repository/: registry.go
internal/service/: admin.go  authGen.go  authGen_test.go  channelTaskQueue.go  channelTaskQueue_test.go  encryption.go  subscriber.go  subscriber_test.go  subscription_test.go
pkg/model/: beckn_test.go
plugins/agentenginetransportwrapper/: README.md  agentenginetransportwrapper.go  agentenginetransportwrapper_test.go
plugins/cachingsecretskeymanager/: cachingsecretskeymanager.go  cachingsecretskeymanager_test.go
plugins/decrypter/: decrypter.go  decrypter_test.go
plugins/encrypter/: encrypter.go  encrypter_test.go
plugins/inmemorysecretkeymanager/: inmemorysecretkeymanager.go  inmemorysecretkeymanager_test.go
plugins/oidcauth/: oidcauth.go  oidcauth_test.go
plugins/oidcauthtransportwrapper/: oidcauthtransportwrapper.go  (+1 more)
(+198 files in other folders)
