[tool.poetry]
name = "backend"
authors = ["GCP Onix <gcp-onix@google.com>"]
license = "Apache 2.0"
readme = "README.md"
version = "0.1.0"
packages = [{include = "*.py"}]


[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.104.0"
uvicorn = {extras = ["standard"], version = "^0.23.0"}
pydantic = {extras = ["email"], version = "^2.12.5"}
google-cloud-firestore = "^2.13.0"
google-cloud-storage = "^2.10.0"
python-dotenv = "^1.2.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"